--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="match_parent"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/text_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Text"
-    />
+        android:text="Text" />
 
     <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addItemFab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src=""
-    />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_add"
+            app:fabSize="normal"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/colorPrimaryDark" />
 
 </android.support.constraint.ConstraintLayout>
