--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -5,46 +5,154 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent">
 
-<android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".AddUserActivity">
-
-    <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBarLayout"
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            tools:context=".AddUserActivity">
 
-        <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                app:title="@string/add_user_title"
+        <android.support.design.widget.AppBarLayout
+                android:id="@+id/appBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary" />
+                android:layout_height="wrap_content"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    app:title="@string/add_user_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@color/colorPrimary"/>
 
-    <TextView
-            android:text="@string/complete_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/completeNameField"
-            app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" android:hint="@string/complete_name"/>
+        </android.support.design.widget.AppBarLayout>
+
+        <TextView
+                android:text="@string/complete_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView" android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/completeNameField"
+                app:layout_constraintStart_toStartOf="@+id/textView"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                android:hint="Ned Ludd"/>
+
+        <ImageView
+                android:layout_width="56dp"
+                android:background="@color/grey"
+                android:layout_height="56dp"
+                android:id="@+id/profileImageView" android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/completeNameField"
+                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/textView"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/completeNameField"
+                android:src="@drawable/ic_image" android:padding="6dp"/>
+
+        <ImageView
+                android:layout_width="56dp"
+                android:background="@color/grey"
+                android:layout_height="56dp"
+                android:id="@+id/idImageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/idNumberField"
+                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/idNumberField"
+                android:src="@drawable/ic_image" android:padding="6dp"
+                app:layout_constraintBottom_toBottomOf="@+id/idNumberField"/>
+
+        <ImageView
+                android:layout_width="56dp"
+                android:background="@color/grey"
+                android:layout_height="56dp"
+                android:id="@+id/residenceProofImageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/addressField"
+                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/addressField"
+                android:src="@drawable/ic_image" android:padding="6dp"
+                app:layout_constraintBottom_toBottomOf="@+id/addressField"/>
+
+        <RadioGroup android:layout_width="match_parent"
+                    android:id="@+id/radioGroup"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/completeNameField"
+                    app:layout_constraintLeft_toLeftOf="@id/completeNameField"
+                    android:layout_marginLeft="16dp">
+
+            <RadioButton android:id="@+id/rgCheck"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="RG" />
+            <RadioButton android:id="@+id/cpfCheck"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="CPF" />
+        </RadioGroup>
+
+        <TextView
+                android:text="Número de RG"
+                android:layout_width="wrap_content"
+                android:id="@+id/idTitle"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"/>
+
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/idNumberField"
+                app:layout_constraintStart_toStartOf="@+id/idTitle" android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@+id/idTitle" android:hint="0000000"/>
+
+        <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="wrap_content"
+                android:indeterminate="true"
+                android:layout_height="wrap_content"
+                android:id="@+id/profileProgressBar" app:layout_constraintStart_toStartOf="@+id/profileImageView"
+                app:layout_constraintEnd_toEndOf="@+id/profileImageView" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/profileImageView" android:visibility="invisible"/>
+
+        <TextView
+                android:text="Endereço"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addressTitle" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/idNumberField"
+                app:layout_constraintStart_toStartOf="@+id/idNumberField"/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/addressField" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/addressTitle"
+                app:layout_constraintStart_toStartOf="@+id/addressTitle"
+                android:hint="Rua, número"/>
+
+        <Button android:layout_width="0dp" android:layout_height="wrap_content"
+                android:id="@+id/saveButton"
+                android:text="Adicionar usuário"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@id/addressField"
+                android:layout_marginTop="32dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
 </ScrollView>
