--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -23,13 +23,13 @@
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/colorPrimaryDark" />
 
-    <com.leinardi.android.speeddial.SpeedDialView
-            android:visibility="gone"
-            android:id="@+id/speedDial"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:sdMainFabClosedSrc="@drawable/ic_directions_bike" />
+    <!--<com.leinardi.android.speeddial.SpeedDialView-->
+            <!--android:visibility="gone"-->
+            <!--android:id="@+id/speedDial"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:sdMainFabClosedSrc="@drawable/ic_directions_bike" />-->
 
 </android.support.constraint.ConstraintLayout>
