--- a/app/src/main/res/layout/item_cell.xml
+++ b/app/src/main/res/layout/item_cell.xml
@@ -3,6 +3,7 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
+                                             android:id="@+id/cellContainer"
                                              android:paddingTop="16dp"
                                              android:paddingBottom="16dp"
                                              android:layout_height="wrap_content">
