--- a/app/src/main/res/layout/activity_add_bike.xml
+++ b/app/src/main/res/layout/activity_add_bike.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-              tools:context=".AddBikeActivity"
-              android:layout_height="match_parent">
+            tools:context=".AddBikeActivity"
+            android:layout_height="match_parent">
 
-<android.support.constraint.ConstraintLayout
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".AddUserActivity">
+            android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
                 android:id="@+id/appBarLayout"
@@ -29,56 +28,58 @@
 
         </android.support.design.widget.AppBarLayout>
 
-<ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/appBarLayout" android:layout_marginTop="16dp"
-            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/progressBar"/>
+        <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/appBarLayout" android:layout_marginTop="16dp"
+                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/progressBar"/>
 
-<ImageView android:id="@+id/bikePhotoImageView" android:layout_width="match_parent" android:layout_height="250dp"
-               android:layout_marginLeft="16dp"
-               android:layout_marginRight="16dp"
-               app:layout_constraintTop_toBottomOf="@id/progressBar" android:layout_marginTop="16dp"
-                android:padding="64dp"
-               app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-               android:background="@color/grey" tools:srcCompat="@drawable/ic_image" />
+        <ImageView android:id="@+id/bikePhotoImageView" android:layout_width="match_parent"
+                   android:layout_height="250dp"
+                   android:layout_marginLeft="16dp"
+                   android:layout_marginRight="16dp"
+                   app:layout_constraintTop_toBottomOf="@id/progressBar" android:layout_marginTop="16dp"
+                   android:padding="64dp"
+                   app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
+                   android:background="@color/grey" tools:srcCompat="@drawable/ic_image"/>
 
-<EditText android:layout_width="250dp" android:layout_height="wrap_content"
-          app:layout_constraintTop_toBottomOf="@id/bikePhotoImageView"
-          android:id="@+id/serieNumber"
-          android:hint="Número de série da bicicleta"
-          android:layout_marginTop="8dp"
-          app:layout_constraintLeft_toLeftOf="@id/bikePhotoImageView"  />
+        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@id/bikePhotoImageView"
+                  android:id="@+id/serieNumber"
+                  android:hint="Número de série da bicicleta"
+                  android:layout_marginTop="8dp"
+                  app:layout_constraintLeft_toLeftOf="@id/bikePhotoImageView"/>
 
-<EditText android:layout_width="250dp" android:layout_height="wrap_content"
-              app:layout_constraintTop_toBottomOf="@id/serieNumber"
-              android:hint="Nome da bicicleta"
-            android:id="@+id/bikeName"
-              android:layout_marginTop="8dp"
-          app:layout_constraintLeft_toLeftOf="parent"
-          android:layout_marginLeft="16dp"
-               />
-
-
-    <EditText android:layout_width="250dp" android:layout_height="wrap_content"
-              app:layout_constraintTop_toBottomOf="@id/bikeName"
-              android:hint="Número de ordem"
-              android:inputType="number"
-              android:id="@+id/orderNumber"
-              android:layout_marginTop="8dp"
-              android:layout_marginLeft="16dp"
-              app:layout_constraintLeft_toLeftOf="parent"
-                />
-    <Button
-            android:text="Cadastrar Bicicleta"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/saveButton" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/orderNumber" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@id/serieNumber"
+                  android:hint="Nome da bicicleta"
+                  android:id="@+id/bikeName"
+                  android:layout_marginTop="8dp"
+                  app:layout_constraintLeft_toLeftOf="parent"
+                  android:layout_marginLeft="16dp"
+        />
 
 
-</android.support.constraint.ConstraintLayout>
+        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@id/bikeName"
+                  android:hint="Número de ordem"
+                  android:inputType="number"
+                  android:id="@+id/orderNumber"
+                  android:layout_marginTop="8dp"
+                  android:layout_marginLeft="16dp"
+                  app:layout_constraintLeft_toLeftOf="parent"
+        />
+        <Button
+                android:text="Cadastrar Bicicleta"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/saveButton" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/orderNumber" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+
+
+    </android.support.constraint.ConstraintLayout>
 </ScrollView>
