--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -143,16 +143,42 @@
                 app:layout_constraintStart_toStartOf="@+id/addressTitle"
                 android:hint="Rua, número"/>
 
+
+        <RadioGroup android:layout_width="match_parent"
+                    android:id="@+id/gender"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@id/addressField"
+                    app:layout_constraintLeft_toLeftOf="@id/completeNameField"
+                    android:layout_marginLeft="16dp">
+
+            <RadioButton android:id="@+id/maleCheck"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Masculino" />
+            <RadioButton android:id="@+id/femaleCheck"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Feminino" />
+            <RadioButton android:id="@+id/otherCheck"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Outro" />
+            <RadioButton android:id="@+id/dontNeedCheck"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Prefere não responder" />
+        </RadioGroup>
+
         <Button android:layout_width="0dp" android:layout_height="wrap_content"
                 android:id="@+id/saveButton"
-                android:text="Adicionar usuário"
+                android:text="Adicionar pessoa"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-                app:layout_constraintTop_toBottomOf="@id/addressField"
+                app:layout_constraintTop_toBottomOf="@id/gender"
                 android:layout_marginTop="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
-
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
