--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -178,7 +178,7 @@
                 android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                 app:layout_constraintTop_toBottomOf="@id/gender"
                 android:layout_marginTop="32dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent" style="@style/bprButton"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
