--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#2A9698</color>
+    <color name="colorPrimaryDark">#037F83</color>
+    <color name="colorAccent">#C24439</color>
     <color name="grey">#cccccc</color>
     <color name="rent">#cdcdcd</color>
 </resources>
