--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -48,13 +48,13 @@
                 android:hint="Ned Ludd"/>
 
         <ImageView
-                android:layout_width="56dp"
+                android:layout_width="80dp"
                 android:background="@color/grey"
-                android:layout_height="56dp"
+                android:layout_height="80dp"
                 android:id="@+id/profileImageView" android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/editProfilePhotoButton"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/completeNameField"
-                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/textView"
+                android:layout_marginStart="4dp" app:layout_constraintTop_toTopOf="@+id/textView"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/completeNameField"
                 android:src="@drawable/ic_image" android:padding="6dp"/>
 
@@ -179,6 +179,15 @@
                 app:layout_constraintTop_toBottomOf="@id/gender"
                 android:layout_marginTop="32dp"
                 app:layout_constraintBottom_toBottomOf="parent" style="@style/bprButton"/>
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_edit_white_24dp"
+                android:id="@+id/editProfilePhotoButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/profileImageView"
+                app:layout_constraintTop_toTopOf="@+id/profileImageView"
+                app:layout_constraintBottom_toTopOf="@+id/profileProgressBar"
+                style="@style/bprButton.image"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
