--- a/app/src/main/res/layout/activity_add_bike.xml
+++ b/app/src/main/res/layout/activity_add_bike.xml
@@ -30,11 +30,12 @@
 
         <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:indeterminate="true"
                 app:layout_constraintTop_toBottomOf="@id/appBarLayout" android:layout_marginTop="16dp"
                 app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/progressBar"/>
+                android:id="@+id/progressBar" android:visibility="gone"/>
 
         <ImageView android:id="@+id/bikePhotoImageView" android:layout_width="match_parent"
                    android:layout_height="250dp"
