--- a/app/src/main/res/layout/item_cell.xml
+++ b/app/src/main/res/layout/item_cell.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:id="@+id/cellContainer"
-                                             android:paddingTop="16dp"
-                                             android:paddingBottom="16dp"
-                                             android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:id="@+id/cellContainer"
+                                                   android:paddingTop="16dp"
+                                                   android:paddingBottom="16dp"
+                                                   android:layout_height="wrap_content">
 
     <ImageView
             android:layout_width="60dp"
@@ -28,4 +28,4 @@
             android:id="@+id/cellSubtitle" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/cellTitle" app:layout_constraintStart_toEndOf="@+id/cellAvatar"
             android:layout_marginStart="8dp"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
