--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,5 +8,5 @@
             android:orderInCategory="100"
             android:title="@string/action_search"
             app:showAsAction="always"
-            app:actionViewClass="android.support.v7.widget.SearchView" />
+            app:actionViewClass="androidx.appcompat.widget.SearchView" />
 </menu>
