--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,8 +22,18 @@
                 app:titleTextColor="@color/dark_gray"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/white" />
+                android:background="@color/white"/>
     </com.google.android.material.appbar.AppBarLayout>
+
+    <ImageView
+            android:layout_width="160dp"
+            android:id="@+id/bpr_logo"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/loginButton"
+            android:layout_height="160dp"
+            android:src="@drawable/bpr"/>
 
     <Button
             android:text="Login"
@@ -31,10 +41,14 @@
             android:background="@color/colorPrimary"
             android:textColor="@color/white"
             android:layout_height="wrap_content"
-            android:id="@+id/loginButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
-
+            android:id="@+id/loginButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/bpr_logo"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
