--- a/app/src/main/res/layout/item_cell.xml
+++ b/app/src/main/res/layout/item_cell.xml
@@ -10,22 +10,28 @@
 
     <ImageView
             android:layout_width="60dp"
-            android:layout_height="63dp" tools:srcCompat="@tools:sample/avatars"
+            android:layout_height="63dp"
+            tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/cellAvatar"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-             app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cellTitle"
-            app:layout_constraintTop_toTopOf="@+id/cellAvatar" app:layout_constraintStart_toEndOf="@+id/cellAvatar"
-            android:layout_marginStart="8dp" android:textSize="24sp" android:maxLength="20"/>
+            app:layout_constraintTop_toTopOf="@+id/cellAvatar"
+            app:layout_constraintStart_toEndOf="@+id/cellAvatar"
+            android:layout_marginStart="8dp" android:textSize="24sp"
+            android:maxLength="20"/>
+
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cellSubtitle" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cellTitle" app:layout_constraintStart_toEndOf="@+id/cellAvatar"
+            app:layout_constraintTop_toBottomOf="@+id/cellTitle"
+            app:layout_constraintStart_toEndOf="@+id/cellAvatar"
             android:layout_marginStart="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
