--- a/app/src/main/res/layout/activity_choose_user.xml
+++ b/app/src/main/res/layout/activity_choose_user.xml
@@ -21,7 +21,8 @@
                 app:title="Selecione o usuário"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"/>
+                app:titleTextColor="@color/dark_gray"
+                android:background="@color/white"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
