--- a/app/src/main/res/layout/activity_rent.xml
+++ b/app/src/main/res/layout/activity_rent.xml
@@ -21,7 +21,7 @@
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
-                    app:title="Retirada de bicicleta"
+                    app:title="@string/withdraw_select_bike_title"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:titleTextColor="@color/dark_gray"
